# obscura

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/obscura-browser/: Cargo.toml
crates/obscura-browser/src/: context.rs  fingerprint.rs  lib.rs  page.rs  profiles.rs
crates/obscura-browser/src/page/: api.rs  frames.rs  loading.rs  mod.rs  tests.rs
crates/obscura-cdp/: Cargo.toml
crates/obscura-cdp/src/: dispatch.rs  server.rs
crates/obscura-cdp/src/domains/: browser.rs  emulation.rs  mod.rs  network.rs  page.rs  runtime.rs  storage.rs  target.rs
crates/obscura-cli/: Cargo.toml
crates/obscura-cli/src/: cli.rs  commands.rs  dump.rs  main.rs  tests.rs
crates/obscura-dom/src/: serialize.rs
crates/obscura-js/: Cargo.toml  build.rs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/js/bootstrap/: 00_core.js  10_dom_node.js  20_dom_element.js  30_dom_document.js  40_navigator_screen.js  50_fetch_xhr_url.js  60_selection_ce_file.js  70_blob_clone.js  75_svg_range.js  80_iframe_canvas_font.js  85_workers_idb_ws.js  90_install.js  92_window_globals.js  93_proto_methods.js  94_proto_methods2.js  95_wpt_shims.js  96_proto_methods3.js  97_deep_proto_surface.js  (+1 more)
crates/obscura-js/src/: module_loader.rs  ops.rs  runtime.rs  v8_lock.rs
crates/obscura-mcp/src/: lib.rs
crates/obscura-net/: Cargo.toml
crates/obscura-net/src/: client.rs  lib.rs  tls_profile.rs  wreq_client.rs  ws.rs
crates/obscura-render/: Cargo.toml
crates/obscura-render/examples/: render_test.rs
crates/obscura-render/src/: lib.rs
crates/obscura/src/: page.rs
docs/: Adding-a-CDP-method-or-Web-API.md  Architecture-overview.md  Environment-variables.md
(+7 files in other folders)
