[package]
name = "obscura-cdp"
version.workspace = true
edition.workspace = true

[features]
# Forwards obscura-browser's stealth path so CDP handlers that touch
# Page::stealth_client (e.g. Network.setExtraHTTPHeaders → wreq client) are
# compiled in. Without this the stealth branches are cfg'd out and silently
# dropped.
stealth = ["obscura-browser/stealth"]

[dependencies]
obscura-dom = { workspace = true }
obscura-browser = { workspace = true }
obscura-js = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
obscura-net = { workspace = true }
obscura-render = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_env = "gnu")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
