[package]
name = "obscura-render"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }

blitz-dom = "=0.3.0-alpha.6"
blitz-html = "=0.3.0-alpha.6"
blitz-traits = "=0.3.0-alpha.6"
blitz-paint = "=0.3.0-alpha.6"
anyrender = "0.11.0"
anyrender_vello_cpu = { version = "0.14.0", features = ["multithreading"] }
parley = { version = "0.10", default-features = false, features = ["std"] }
png = "0.18"

[dev-dependencies]
